--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -1,34 +1,30 @@
 <div class="container">
+    <div class="jumbotron">
+        <form ng-submit="main.saveContact()" novalidate name="main.newContactForm">
+            <label for="inputFirstName">First name:</label>
+            <input type="text" ng-model="main.newContact.firstName" ng-required="true" id="inputFirstName" class="form-control">
+            <label for="inputSurname">Surname:</label>
+            <input type="text" ng-model="main.newContact.surname" ng-required="true" id="inputSurname" class="form-control">
+            <label for="inputEmail">E-mail address:</label>
+            <input type="email" ng-model="main.newContact.email" ng-required="true" id="inputEmail" class="form-control">
+            <button type="submit" class="btn btn-primary" ng-disabled="main.newContactForm.$invalid">Add</button>
+        </form>
 
-  <div>
-    <acme-navbar creation-date="main.creationDate"></acme-navbar>
-  </div>
+        <table class="table">
+            <tr>
+                <th>Name</th>
+                <th>E-mail address</th>
+                <th></th>
+            </tr>
+            <tr ng-repeat="contact in main.contacts">
+                <td>{{contact | contactName}}</td>
+                <td>{{contact.email}}</td>
+                <td>
+                    <button class="btn">Edit</button>
+                    <button class="btn btn-danger">Delete</button>
+                </td>
+            </tr>
+        </table>
 
-  <div class="jumbotron text-center">
-    <h1>'Allo, 'Allo!</h1>
-    <p class="lead">
-      <img src="assets/images/yeoman.png" alt="I'm Yeoman"><br>
-      Always a pleasure scaffolding your apps.
-    </p>
-    <p class="animated infinite" ng-class="main.classAnimation">
-      <button type="button" class="btn btn-lg btn-success" ng-click="main.showToastr()">Splendid Toastr</button>
-    </p>
-    <p>
-      With ♥ thanks to the contributions of<acme-malarkey extra-values="['Yeoman', 'Gulp', 'Angular']"></acme-malarkey>
-    </p>
-  </div>
-
-  <div class="row">
-    <div class="col-sm-6 col-md-4" ng-repeat="awesomeThing in main.awesomeThings | orderBy:'rank'">
-      <div class="thumbnail">
-        <img class="pull-right" ng-src="assets/images/{{ awesomeThing.logo }}" alt="{{ awesomeThing.title }}">
-        <div class="caption">
-          <h3>{{ awesomeThing.title }}</h3>
-          <p>{{ awesomeThing.description }}</p>
-          <p><a ng-href="{{awesomeThing.url}}">{{ awesomeThing.url }}</a></p>
-        </div>
-      </div>
     </div>
-  </div>
-
 </div>
